Fix: button stacking on mobile

--- a/public/css/pgcal.css
+++ b/public/css/pgcal.css
@@ -28,3 +28,10 @@
   font-size: 70%;
   float: right;
 }
+
+@media (max-width: 767px) {
+  .fc-toolbar.fc-header-toolbar {
+    display: flex;
+    flex-direction: column;
+  }
+}
